second try to fix z-index

--- a/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/main/main.component.scss
+++ b/Código fuente sin compilar/PlanDeEntrenamiento/src/app/core/layout/main/main.component.scss
@@ -1,6 +1,7 @@
 .router-outlet-container {
   margin: 40pt;
   min-height: 100vh;
+  z-index: -1;
 }
 
 h1 {
